# salutations

./: .coverage  .env.example  .gitignore  ARCHITECTURE.md  AUTOMATED_TESTING.md  AUTONOMOUS_GIT.md  AUTONOMOUS_GIT_README.md  AUTO_PUSH.md  BIFM_INTEGRATION.md  BIFM_NEO4J.md  BRAIDING_GUIDE.md  BUGFIX_AUTONOMOUS_GIT.md  CHEATSHEET.md  DAEMON_STATUS.md  DEPLOY_INSTRUCTIONS.md  DEVICE_FINGERPRINTING.md  DOCS_GUIDE.md  ENTANGLED_GIT.md  FITNESS_DASHBOARD.md  FITNESS_UPDATE.md  GITHUB_PAGES_QUICKSTART.md  GITHUB_PAGES_SETUP.md  GIT_DAEMON.md  META_BRAIDING.md  META_BRAIDING_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_GENERATED.md  README_TESTING.md  REALTIME_DEMO.md  SCL_DEMO.md  SCL_GIT_VISION.md  SCL_SPECIFICATION.md  SITE_READY.md  TESTING_MANIFESTO.md  VSCODE_EXTENSION.md  check_fitness.sh  docker-compose.yml  fitness_now.py  (+5 more)
app/: __init__.py  main.py
config/: fusion_config.yaml
docs/: DEPLOYMENT_SUMMARY.md  README.md  SITE_PREVIEW.md  _config.yml  analytics.html  getting-started.html  index.html  scl-bifm.html  styles.css  why-8-dot-braille.html
examples/: advanced_commit_fitness.py  auto_generated_task.py  automated_testing_agent.py  autonomous_git_agent.py  basic_usage.py  braiding_tutorial.py  entangled_git_agent.py  git_daemon.py  magic_link_soc2_agent.py  meta_braiding_example.py  minimal_braiding_example.py  self_bootstrapping_agent.py  self_publishing_agent.py  (+4 more)
rust/: Cargo.toml  README.md  build.sh  install.sh
rust/src/: agent.rs  bifm.rs  braider.rs  daemon.rs  fitness.rs  fitness_analyzer.rs  main.rs  scl.rs  tests.rs
(+30 files in other folders)
