[package]
name = "autonomous-git"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Barrett"]
description = "Git that manages itself using AI and fitness functions"
license = "MIT"
repository = "https://github.com/ryanbarrett/salutations"

[[bin]]
name = "agit"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }

# Git operations
git2 = "0.18"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# CLI
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"

# Date/time
chrono = "0.4"

# Numerical computing (for MetaBraider)
ndarray = "0.15"
ndarray-rand = "0.14"

# Pattern matching
regex = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File watching
notify = "6.1"

# System daemon
daemonize = "0.5"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
